@@ -1,3 +1,14 @@
+2021-06-10  Sihui Liu  <sihui_liu@apple.com>
+
+        Regression(r278449): add null check for completionHandler in WebIDBServer::close
+        https://bugs.webkit.org/show_bug.cgi?id=226900
+        rdar://79160392
+
+        Reviewed by Chris Dumez.
+
+        * NetworkProcess/IndexedDB/WebIDBServer.cpp:
+        (WebKit::WebIDBServer::close):
+
 2021-06-10  Eric Carlson  <eric.carlson@apple.com>
 
         [Cocoa] Remote video layer should respect video gravity when resizing
